<resources>
    <string name="app_name">shaka</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--btn-->
    <string name="btn_insert">insert</string>
    <string name="btn_delete">delete</string>
    <string name="btn_update">update</string>
    <string name="btn_select">select</string>

    <!--menu-->
    <string name="menu_upload">uploading</string>
    <string name="menu_download">download</string>
    <string name="menu_register">register</string>
    <string name="menu_login">login</string>
    <string name="tv_order_content">content:</string>
    <string name="tv_order_id">task Id:</string>
    <string name="tv_order_take_it_now">take it now</string>
    <string name="rb_release_focus">focus</string>
    <string name="rb_release_pilot_vote">mp pilot vote</string>
    <string name="rb_release_pviews">wx pviews</string>
    <string name="rb_release_pviews_thumbs">wx pviews thumbs</string>
    <string name="rb_release_pviews_thumbs_reviews">pviews thumbs reviews</string>
    <string name="rb_release_tpos_vote">tpos vote</string>
    <string name="tv_release_company">dskb-dhz:</string>
    <string name="tv_release_company_hint">dskb-dhz is useful</string>
    <string name="tv_release_count">count:</string>
    <string name="tv_release_link">link:</string>
    <string name="tv_release_link_hint">link here</string>
    <string name="tv_release_raise_price">raise price:</string>
    <string name="tv_release_remark">remark</string>
    <string name="tv_release_remark_hint">escribe your task</string>
    <string name="tv_release_total_price">total price:</string>
    <string name="tv_release_unit_price">unit price:</string>
    <string name="tv_release_voter">voter:</string>
    <string name="tv_release_voter_hint">voter or vote number</string>
    <string name="btn_release_confirm">confirm</string>
    <string name="tv_release_deabline">deadline:</string>
    <string name="fragment_release_task">release task</string>
    <string name="tv_order_deadline">deadline:</string>
    <string name="title_fragment_release_task">release task</string>
    <string name="tv_release_deadline">deadline:</string>
    <string name="arrays_all_type">all type</string>
    <string name="arrays_focus_type">focus type</string>
    <string name="arrays_pviews_thumbs_type">pviews thumbs</string>
    <string name="arrays_pviews_type">pviews type</string>
    <string name="arrays_vote_type">vote type</string>
    <string name="tips_data_invalid">invalid data,check it</string>
    <string name="tips_upload_image">no pic</string>
    <string name="toast_error_code">error code</string>
    <string name="toast_error_describe">describe</string>
    <string name="toast_failure">failure</string>
    <string name="toast_success">success</string>
    <string name="btn_accept">accept</string>
    <string name="btn_submit">submit</string>
    <string name="title_fragment_orderDetail">order detail</string>
    <string name="tv_order_detail_company">dskb-dhz:</string>
    <string name="tv_order_detail_link">link:</string>
    <string name="tv_order_detail_voter">voter:</string>
    <string name="tv_order_detail_pay">pay:</string>
    <string name="tv_order_detail_remark">remark:</string>
    <string name="tv_order_detail_image_proof">proof:</string>
    <string name="tv_order_detail_image_submit">submit image</string>
    <string name="toast_on_the_clipboard">pasted to clipboard</string>
    <string name="headerlayout_title">current user</string>
    <string name="app_setting_share">share</string>
    <string name="app_setting_contact">contact me</string>
    <string name="app_main_prepaid">prepaid</string>
    <string name="app_main_home">home</string>
    <string name="app_main_code">code</string>
    <string name="app_setting_tools">tools</string>
    <string name="app_setting_logout">logout</string>
    <string name="app_setting_power_off">power off</string>
    <string name="app_setting_update">check update</string>
    <string name="fragment_invitation_code">invitation code</string>
    <string name="tv_invitation_code">invitation code:</string>
    <string name="tv_invitation_earnings">invitation earnings:</string>
    <string name="tv_invitation_count">invitation count:</string>
    <string name="title_fragment_feed_back">contact me</string>
    <string name="tv_feed_back">write your feedback</string>
    <string name="tv_add_a_photo">＋add screenshot</string>
    <string name="btn_complete">complete</string>
    <string name="app_main_test">test</string>
</resources>
