<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_upload" />
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_download" />
    <item
        android:id="@+id/action_register"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_register" />
    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_login" />

</menu>
