<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/menu_upload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/menu_download"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:title="@string/menu_register"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/menu_login"
        app:showAsAction="never" />

</menu>
